gl33-master/src/test/deca/context/invalid/other/heritageClasseInexistante.deca
// Test de contexte invalide : héritage d'une classe inexistante

class A{}

class B extends C{}
{
    B b = new B();
}
